[gd_scene load_steps=6 format=3 uid="uid://d0bri3ehmnp65"]

[ext_resource type="Script" path="res://Interface/MenuUI/main_menu.gd" id="1_g6644"]
[ext_resource type="Texture2D" uid="uid://c1bu2xx6i2i00" path="res://Interface/Icons/Other/MenuBackground.png" id="2_nq1or"]
[ext_resource type="Texture2D" uid="uid://epa7nni3ccpd" path="res://Interface/Icons/Other/ButtonDefault.png" id="3_w12nw"]
[ext_resource type="Texture2D" uid="uid://d4i2kd5wqmetn" path="res://Interface/Icons/Other/ButtonPressed.png" id="4_jsl2e"]
[ext_resource type="Texture2D" uid="uid://dd31b5rbwu0vi" path="res://Interface/Icons/Other/ButtonHovered.png" id="5_pibg7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6644")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(800, 450)
texture = ExtResource("2_nq1or")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -82.0
offset_right = 150.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_w12nw")
texture_pressed = ExtResource("4_jsl2e")
texture_hover = ExtResource("5_pibg7")

[node name="Label" type="Label" parent="VBoxContainer/PlayButton"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 50
text = "PLAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_w12nw")
texture_pressed = ExtResource("4_jsl2e")
texture_hover = ExtResource("5_pibg7")

[node name="Label" type="Label" parent="VBoxContainer/ExitButton"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 50
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.5
offset_top = 250.0
offset_right = 200.5
offset_bottom = 319.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "YOU HAVE WON!"

[connection signal="button_down" from="VBoxContainer/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_button_down"]
